5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1643_2703.log
== TEST (2019-04-03 19:23:57) 
-- CODE:
age=int(input("age:"))
if(age>=18):
	print("eleitor")
else:
	print("nao-eleitor")
-- OUTPUT:
nao-eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:24:04) 
-- CODE:
age=int(input("age:"))
if(age>=18):
	print("eleitor")
else:
	print("nao-eleitor")
-- EXECUTION TIME:
0.126479
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao-eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:24:52) 
-- CODE:
age=int(input("age:"))
if(age>=18):
	mensagem("eleitor")
else:
	mensagem("nao-eleitor")
print(mensagem.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem("nao-eleitor")
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:26:00) 
-- CODE:
age=int(input("age:"))
if(age>=18):
   mensagem("eleitor")
else:
    mensagem("nao-eleitor")
   print(mensagem.lower())
-- ERROR:
File "XXXX", line 6
    print(mensagem.lower())
                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:26:36) 
-- CODE:
age=int(input("age:"))
if(age>=18):
   print("eleitor")
else:
    print("nao_eleitor")
   print(mensagem.lower())
-- ERROR:
File "XXXX", line 6
    print(mensagem.lower())
                          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 19:26:42) 
-- CODE:
age=int(input("age:"))
if(age>=18):
   print("eleitor")
else:
    print("nao_eleitor")
  
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 19:26:48) 
-- CODE:
age=int(input("age:"))
if(age>=18):
   print("eleitor")
else:
    print("nao_eleitor")
  
-- EXECUTION TIME:
0.166132
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
